--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2,8 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family:Arial, Helvetica, sans-serif;
-    background-size: auto;
-    background-repeat: no-repeat;
+    background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
 }
 
 .hero-body {
@@ -12,7 +11,7 @@ body {
 }
 .hero.is-success .title {
     font-size: 60px;
-    color: #a83a03;
+    color: #c04305;
 }
 
 .hero.is-success .subtitle {
@@ -72,12 +71,16 @@ footer {
     padding-top: 10px;
 }
 
+div.footer {
+    padding: 1%;
+    background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
+    margin-bottom: auto;
+}
+
 .fa-facebook {
 	background: #3B5998;
 	color: white;
     font-size: 40px;
-    position: relative;
-    top: 10px;
 }
   
 
@@ -85,16 +88,12 @@ footer {
     background: #007bb5;
     color: white;
     font-size: 40px;
-    position: relative;
-    top: 10px;
   }
 
 .fa-youtube {
     background: #dd4b39;
     color: white;
     font-size: 40px;
-    position: relative;
-    top: 10px;
   }
 
 h2 {
@@ -103,22 +102,24 @@ h2 {
 }
 
 .control {
-    margin-bottom: 10px;
-    padding: 18px 10px;
     color: white;
-    width: 100%;
     border-radius: 6px;
     font-size: 20px;
     font-family: 'Helvetica', Arial, sans-serif;
+   display: flex;
 }
 
 .button.is-primary {
     display: block;
     background-color: rgba(0, 0, 0, 0.85);
     color: white;
-    width: 100%;
+    width: 50%;
     border-radius: 6px;
     font-size: 20px;
     font-family: 'Helvetica', Arial, sans-serif;
+}
+
+input.input.is-medium {
+    width: 50%;
 }
   
