--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -69,6 +69,9 @@ div.select {
 footer {
     margin-top: 40px;
     padding-top: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
 }
 
 div.footer {
