--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -58,25 +58,26 @@ div.select {
     display: flex;
     padding-top: 25px;
     justify-content: center;
-    width: 100%
+    width: 100%;
+    padding-bottom: 20px;
     }
 #line {
     text-align: center;
     font-size: 20px;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
-footer {
+.contact-us {
     margin-top: 40px;
     padding-top: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
 }
 
 div.footer {
     padding: 1%;
     background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .fa-facebook {
@@ -103,8 +104,8 @@ h2 {
     font-weight: bold;
 }
 
-.control {
-    color: white;
+div.control {
+    color: black;
     border-radius: 6px;
     font-size: 20px;
     font-family: 'Helvetica', Arial, sans-serif;
@@ -115,7 +116,7 @@ h2 {
     display: block;
     background-color: rgba(0, 0, 0, 0.85);
     color: white;
-    width: 50%;
+    width: 90%;
     border-radius: 6px;
     font-size: 20px;
     font-family: 'Helvetica', Arial, sans-serif;
@@ -123,5 +124,9 @@ h2 {
 
 input.input.is-medium {
     width: 50%;
+}
+
+#resto-container {
+    background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
 }
   
