--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -128,5 +128,11 @@ input.input.is-medium {
 
 #resto-container {
     background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
+    margin-top: 100px;
+}
+
+.image {
+    width: 20%;
+
 }
   
